# python-airbnb-backend

./: .gitignore  build.sh  pyproject.toml  render.yaml
bookings/: admin.py  models.py  serializers.py
bookings/migrations/: 0001_initial.py
commons/: models.py
config/: applications.py  authentication.py  databases.py  settings.py  urls.py  views.py
direct_messages/: admin.py  models.py
direct_messages/migrations/: 0001_initial.py  0002_alter_chattingroom_users_alter_message_chatroom_and_more.py
medias/: models.py  serializers.py  urls.py  views.py
medias/migrations/: 0001_initial.py  0002_rename_file_photo_url.py
reviews/: admin.py  models.py  serializers.py  urls.py  views.py
reviews/migrations/: 0001_initial.py  0002_alter_review_user.py
rooms/: admin.py  models.py  serializers.py  urls.py  views.py
rooms/migrations/: 0001_initial.py  0002_room_description.py
rooms/templates/: all_rooms.html
users/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_gender.py  0003_user_avatar_user_currency_user_language_and_more.py  0004_user_is_host.py
wishlists/: models.py  serializers.py  urls.py  views.py
wishlists/migrations/: 0001_initial.py  0002_alter_wishlist_rooms_alter_wishlist_user.py
